[gd_scene load_steps=4 format=2]

[ext_resource path="res://Experiments/ElementBending/Objects/Bender/Bender.gd" type="Script" id=1]
[ext_resource path="res://Experiments/ElementBending/Sprites/spr_circle.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 32.069

[node name="Bender" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Head" type="Sprite" parent="Collision"]
self_modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 2 )

[node name="Visor" type="Sprite" parent="Collision/Head"]
position = Vector2( 12, 0 )
scale = Vector2( 0.5, 0.7 )
texture = ExtResource( 2 )

[node name="RightArm" type="Position2D" parent="Collision"]
position = Vector2( 0, 50 )

[node name="RightArmClose" type="Position2D" parent="Collision"]
position = Vector2( 12, 32 )

[node name="LeftArm" type="Position2D" parent="Collision"]
position = Vector2( 0, -50 )
scale = Vector2( 1, -1 )

[node name="LeftArmClose" type="Position2D" parent="Collision"]
position = Vector2( 12, -32 )
scale = Vector2( 1, -1 )

[node name="FrontClose" type="Position2D" parent="Collision"]
position = Vector2( 85.3333, 0 )

[node name="FrontFar" type="Position2D" parent="Collision"]
position = Vector2( 266.667, 0 )

[node name="Velocity" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 100, 0 )
width = 2.0
default_color = Color( 0.4, 0.501961, 1, 1 )

[node name="Movement" type="Line2D" parent="."]
position = Vector2( 0, 4 )
points = PoolVector2Array( 0, 0, 100, 0 )
width = 2.0
default_color = Color( 1, 0, 0, 1 )

[node name="Inertia" type="Line2D" parent="."]
position = Vector2( 0, -4 )
points = PoolVector2Array( 0, 0, 100, 0 )
width = 2.0
default_color = Color( 0.0313726, 1, 0, 1 )
